objects/PRMGroupAccProcessLog__c.object
<CustomObject>
    <description>Log to monitor group/team account assignment</description>
    <fields>
        <fullName>AccountsToProcess__c</fullName>
        <label>AccountsToProcess</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChallengeMemberInfo__c</fullName>
        <label>Challenge Member Info</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ErrorMessageInformation__c</fullName>
        <label>Error Message Information</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EventsProcessed__c</fullName>
        <label>Events Processed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GroupAccTeamIds__c</fullName>
        <description>Group Teams Associated with the Teams which got Unsubscribed.</description>
        <label>GroupAccTeamIds</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GroupTeamIds__c</fullName>
        <label>GroupTeamIds</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProcessedTeamMembers__c</fullName>
        <label>Processed Team Members</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UnsubscribedChallengeIds__c</fullName>
        <label>UnsubscribedChallengeIds</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>PRM Group Account Process Log</label>
    <nameField>
        <displayFormat>GRP-{000000}</displayFormat>
        <label>PRM Group Account Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Group Account Process Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>